--- a/FinalPos/login/style.css
+++ b/FinalPos/login/style.css
@@ -1,16 +1,35 @@
 @import url("https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
 
-* {
+#bg-login{
+  background-image: url('../images/team/barista-barista-girl-business-café.jpg');
+  background-size:cover;
+  background-position: center center;
+}
+
+/* * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
   font-family: "Poppins", sans-serif;
-}
-body {
+} */
+/* body {
   background-color: #bc6c25;
   background: linear-gradient(to left, #d48844, #d69861);
   font-family: "Poppins", sans-serif;
-}
+} */
+ .container .slide-down{
+  animation: slide-down 1.5;
+ }
+ @keyframes slide-down{
+  from{
+    opacity:0;
+    transform:translateY(-40px);
+  }
+  to{
+    opacity: 1;
+    transform: translateY(0px);
+  }
+ }
 .container {
   background: #ffbc81;
   width: 450px;
